# deep-research

./: .gitignore  README.md  pyproject.toml
01_data/: 01_index_data.ipynb  config_data.yaml  docker-compose.yml  utils.py
01_data/_data/: 03_KRP_chunks.parq
01_data/_weaviate_data/krp_stazh/SylloIoec7VP/: proplengths
01_data/_weaviate_data/krp_stazh/SylloIoec7VP/lsm/objects/: segment-1752738461465613960.bloom  segment-1752738461465613960.cna  segment-1752738461465613960.secondary.0.bloom  segment-1752738461465613960.secondary.1.bloom
01_data/_weaviate_data/krp_stazh/SylloIoec7VP/lsm/property__id/: segment-1752738461465249460.db
01_data/_weaviate_data/krp_stazh/SylloIoec7VP/lsm/property_identifier/: segment-1752738461465737293.db
01_data/_weaviate_data/krp_stazh/SylloIoec7VP/lsm/property_identifier_searchable/: segment-1752738461466574960.db
01_data/_weaviate_data/krp_stazh/SylloIoec7VP/lsm/property_title/: segment-1752738461465908918.db
01_data/_weaviate_data/krp_stazh/SylloIoec7VP/lsm/property_title_searchable/: segment-1752738461466485876.db
01_data/_weaviate_data/krp_stazh/SylloIoec7VP/main.hnsw.commitlog.d/: 1752738461
01_data/_weaviate_data/raft/: raft.db
02_app/: config_app.yaml  main.py
02_app/_core/: app_info.py  config.py  embeddings.py  llm_client.py  llm_processing.py  logger.py  models.py  prompts.py  search.py  utils.py  workflow.py
02_app/_data_input/: 02_KRP_selec.parq
